Fix blur on safari

--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,7 @@ body {
     z-index: 1000;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
     opacity: 0;
 }
 
